--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@nestjs/core": "^8.1.2",
     "@nestjs/event-emitter": "^1.3.0",
     "@nestjs/platform-express": "^8.1.2",
-    "aws-sdk": "^2.1169.0",
+    "aws-sdk": "^2.1352.0",
     "axios": "^0.27.2",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
@@ -51,6 +51,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
+    "sharp": "^0.26.0",
     "sqs-consumer": "^5.7.0",
     "uuid": "^8.3.2"
   },
